--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: appointment-service
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/homestead
+    url: jdbc:mysql://localhost:3306/homestead?serverTimezone=Europe/Berlin&useLegacyDatetimeCode=false
     username: homestead
     password: secret
     tomcat:
